--- a/bcards/nagoorbasha.html
+++ b/bcards/nagoorbasha.html
@@ -268,23 +268,23 @@ Together, we’re better and We encourage every patient to be engaged in care  w
 			</embed>
 	</object> -->
 <div >
-	<img src="images/nagoor hosp.jpg" class="p-img mar-5">
-	<img src="images/nagoor hosp 2.jpg" class="p-img mar-5">
+	<img src="images/nagoor hosp.jpg" class="p-img">
+	<img src="images/nagoor hosp 2.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div>
-		<img src="images/liver.jpg" class="p-img mar-5">
-		<img src="images/eus.jpg" class="p-img mar-5">
+		<img src="images/liver.jpg" class="p-img">
+		<img src="images/eus.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 
 <div>
-	<img src="images/gastric.jpg" class="p-img mar-5">
-	<img src="images/polypec.jpg" class="p-img mar-5">
+	<img src="images/gastric.jpg" class="p-img">
+	<img src="images/polypec.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div style="display: flex; justify-content: center;">
-	<img src="images/luminal stent.jpg" class="p-img mar-5">
+	<img src="images/luminal stent.jpg" class="p-img">
 </div>
 </div>
 </div>
