--- a/bcards/praneeth.html
+++ b/bcards/praneeth.html
@@ -106,7 +106,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<ul class="clearfix">
 	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Services Offered</a></li>
 
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#experience">clients</a></li> -->
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
@@ -137,7 +137,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">Clients</a><span class="rsicon rsicon-chevron-down"></span>
 	</li> -->
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Services Offered</a></li>
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
 	
 	</ul></nav></div>
@@ -229,23 +229,23 @@ We take the time to understand our patients need and then provide customized sol
 			</embed>
 	</object> -->
 <div >
-	<img src="images/award.jpg" class="p-img mar-5">
-	<img src="images/equipment.jpg" class="p-img mar-5">
+	<img src="images/award.jpg" class="p-img">
+	<img src="images/equipment.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div>
-		<img src="images/child.jpg" class="p-img mar-5">
-		<img src="images/root.jpg" class="p-img mar-5">
+		<img src="images/child.jpg" class="p-img">
+		<img src="images/root.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 
 <div>
-	<img src="images/smile.jpg" class="p-img mar-5">
-	<img src="images/braces.jpg" class="p-img mar-5">
+	<img src="images/smile.jpg" class="p-img">
+	<img src="images/braces.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div style="display: flex; justify-content: center;">
-	<img src="images/teeth-whitning.jpg" class="p-img mar-5">
+	<img src="images/teeth-whitning.jpg" class="p-img">
 </div>
 </div>
 </div>
