--- a/bcards/rajesh.html
+++ b/bcards/rajesh.html
@@ -103,7 +103,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<ul class="clearfix">
 	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Services Offered</a></li>
 
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#experience">clients</a></li> -->
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
@@ -134,7 +134,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">Clients</a><span class="rsicon rsicon-chevron-down"></span>
 	</li> -->
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Services Offered</a></li>
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
 	
 	</ul></nav></div>
@@ -158,7 +158,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 <div class="profile-info">
 <div class="profile-items clearfix">
 </div>
-<h1 class="profile-title" style="color: #ffffff;">Rajesh K</h1>
+<h1 class="profile-title" style="color: #ffffff;">Rajesh.K</h1>
 <h2 class="profile-position"></h2></div>
 <ul class="profile-list">
 	<li class="clearfix">
@@ -264,7 +264,7 @@ requirements in time, every time.</p>
 </div>
 </section>
 <section id="services" class="section section-services text-left"><div class="animate-up">
-<h2 class="section-title">Our Services</h2>
+<h2 class="section-title">Services Offered</h2>
 <div class="section-box bgWhite">
 <div class="row">
 	<div class="col-sm-4">
