--- a/bcards/ramakrishna.html
+++ b/bcards/ramakrishna.html
@@ -226,19 +226,19 @@ Download Resume </a></p> -->
 			</embed>
 	</object> -->
 <div >
-	<img src="images/family.jpg" class="p-img mar-5">
-	<img src="./images/oldage.jpg" class="p-img mar-5">
+	<img src="images/family.jpg" class="p-img">
+	<img src="./images/oldage.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div>
-		<img src="images/corporates.jpg" class="p-img mar-5">
-		<img src="images/cover.jpg" class="p-img mar-5">
+		<img src="images/corporates.jpg" class="p-img">
+		<img src="images/cover.jpg" class="p-img">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 
 <div>
-	<img src="images/beach.jpg" class="p-img mar-5">
-	<img src="images/whole family.jpg" class="p-img mar-5">
+	<img src="images/beach.jpg" class="p-img">
+	<img src="images/whole family.jpg" class="p-img">
 </div>
 </div>
 </div>
