--- a/bcards/venkat.html
+++ b/bcards/venkat.html
@@ -106,7 +106,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<ul class="clearfix">
 	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Countries to Study</a></li>
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Our Services</a></li>
 
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#experience">clients</a></li> -->
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
@@ -137,7 +137,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Countries to Study</a></li>
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">Clients</a><span class="rsicon rsicon-chevron-down"></span>
 	</li> -->
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">Our Services</a></li>
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
 	
 	</ul></nav></div>
@@ -230,7 +230,7 @@ Download Resume </a></p> -->
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 <div>
-		<img src="images/canada.png" class="p-img mar-5">
+		<img src="images/canada.jpg" class="p-img mar-5">
 		<img src="images/europe.jpg" class="p-img mar-5">
 </div>
 <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
