--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ and (orientation : landscape) {
                             Creating & Increasing Business values with brand stories.
                         </p>
                     </div>
-                    <img src="assets/iso_compress65.jpg" alt="">
+                    <img src="assets/iso-min.png" alt="">
                     <h1 class="display-1 show-mobile" style="padding-top: 45px; text-align: center;">Certified to be finest</h1>
                 </div>
                 <div class="col-block item-process" data-aos="fade-up">
@@ -733,9 +733,9 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/magsmen works.jpg" class="thumb-link" title="Magsmen Works"
+                            <a href="images/portfolio/box compress.jpg" class="thumb-link" title="The #Box"
                                 data-size="1050x700">
-                                <img src="images/portfolio/magsmen works.jpg" alt="">
+                                <img src="images/portfolio/box compress.jpg" alt="">
                             </a>
                         </div>
 
@@ -748,7 +748,7 @@ and (orientation : landscape) {
                             </p>
                         </div>
 
-                        <a href="https://www.facebook.com/magsmenindia/" class="item-folio__project-link" title="Magsmen India Facebook">
+                        <a href="https://www.facebook.com/thehashbox/" class="item-folio__project-link" title="The #Box Facebook">
                             <i class="icon-link"></i>
                         </a>
 
@@ -785,22 +785,22 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/myratz.jpg" class="thumb-link" title="Myratz"
+                            <a href="images/portfolio/magsmen works.jpg" class="thumb-link" title="Magsmen Works"
                                 data-size="1050x700">
-                                <img src="images/portfolio/myratz.jpg" alt="">
+                                <img src="images/portfolio/magsmen works.jpg" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Myratz
+                                Magsmen Works
                             </h3>
                             <p class="item-folio__cat">
                                 Branding
                             </p>
                         </div>
 
-                        <a href="" class="item-folio__project-link" title="">
+                        <a href="https://www.facebook.com/magsmenindia/" class="item-folio__project-link" title="Magsmen India Facebook">
                             <i class="icon-link"></i>
                         </a>
 
@@ -1027,7 +1027,7 @@ and (orientation : landscape) {
                    
                 </ul>
 <div style="padding: 20px 0 10px;">
-    <img src="assets/iso_compress65.jpg" alt="" style="height: 100x; width: 100px;">
+    <img src="assets/iso-min.png" alt="" style="height: 100x; width: 100px;">
 
 </div>
             </div>
