--- a/bcards/subhash.html
+++ b/bcards/subhash.html
@@ -159,7 +159,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 <div class="profile-info">
 <div class="profile-items clearfix">
 </div>
-<h1 class="profile-title" style="color: #ffffff;">Subhash G</h1>
+<h1 class="profile-title" style="color: #ffffff;">Subhash.G</h1>
 <h2 class="profile-position"></h2></div>
 <ul class="profile-list">
 	<li class="clearfix">
