--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ and (orientation : landscape) {
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Magsmen Works
+                                The #Box
                             </h3>
                             <p class="item-folio__cat">
                                 Branding
