removed lion image

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/artbliss_compress92.jpg" class="thumb-link" title="Art Bliss"
+                            <a href="images/portfolio/artbliss_compress92.jpg" class="thumb-link" title="Art Bliss"
                                 data-size="1050x700">
                                 <img src="images/portfolio/artbliss_compress92.jpg" alt="">
                             </a>
@@ -707,7 +707,7 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/integrity.jpg" class="thumb-link" title="Integrity Global Services"
+                            <a href="images/portfolio/integrity.jpg" class="thumb-link" title="Integrity Global Services"
                                 data-size="1050x700">
                                 <img src="images/portfolio/integrity.jpg" alt="">
                             </a>
@@ -759,7 +759,7 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/lsj.jpg" class="thumb-link" title="LSJ"
+                            <a href="images/portfolio/lsj.jpg" class="thumb-link" title="LSJ"
                                 data-size="1050x700">
                                 <img src="images/portfolio/lsj.jpg" alt="">
                             </a>
