--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>BESTBRANDINGAGENCY</title>
+    <title>Let's Build Your Brand!</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
